--- a/config/manifests/bases/stroom-k8s-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/stroom-k8s-operator.clusterserviceversion.yaml
@@ -48,7 +48,7 @@ spec:
   - stroom
   links:
   - name: Repository (GitHub)
-    url: https://github.com/p-kimberley/stroom-k8s-operator
+    url: https://github.com/gradata-systems/stroom-k8s-operator
   - name: Stroom repository (GitHub)
     url: https://github.com/gchq/stroom
   maintainers:
@@ -56,5 +56,5 @@ spec:
     name: Peter Kimberley
   maturity: beta
   provider:
-    name: GCHQ
-  version: 0.0.0
+    name: Gradata Systems Pty Ltd
+  version: 1.0.0
