--- a/samples/stroom-cluster.yaml
+++ b/samples/stroom-cluster.yaml
@@ -16,6 +16,7 @@ spec:
   ingress:
     hostName: stroom.example.com
     secretName: stroom-tls
+    className: nginx
   nodeTerminationPeriodSecs: 300
   volumeClaimDeletePolicy: DeleteOnScaledownOnly
   logSender:
@@ -41,20 +42,16 @@ spec:
             storage: 1Gi
           limits:
             storage: 1Gi
-        memoryOptions:
-          initialPercentage: 50
-          maxPercentage: 75
         selector:
           matchLabels:
             app: stroom
             component: stroom-node
-      sharedDataVolume:
-        nfs:
-          server: stroom.fs.example.com
-          path: /data/stroom/stroom-shared
       ingressEnabled: true
       readinessProbeTimings: {}
       livenessProbeTimings: {}
+      memoryOptions:
+        initialPercentage: 50
+        maxPercentage: 75
       resources:
         requests:
           cpu: 500m
@@ -87,11 +84,9 @@ spec:
           matchLabels:
             app: stroom
             component: stroom-node
-      sharedDataVolume:
-        nfs:
-          server: stroom.fs.example.com
-          path: /data/stroom/stroom-shared
       ingressEnabled: true
+      ingressAnnotations:
+        nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
       resources:
         requests:
           cpu: 500m
@@ -104,3 +99,8 @@ spec:
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
+  extraVolumes:
+    - name: shared
+      nfs:
+        server: stroom.fs.example.com
+        path: /data/stroom/stroom-shared
