--- a/samples/stroom-cluster.yaml
+++ b/samples/stroom-cluster.yaml
@@ -87,6 +87,9 @@ spec:
       ingressEnabled: true
       ingressAnnotations:
         nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+      memoryOptions:
+        initialPercentage: 50
+        maxPercentage: 75
       resources:
         requests:
           cpu: 500m
