--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -10,5 +10,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: docker.intranet.gradata.com.au/gradata/stroom-k8s-operator
-  newTag: 1.0.10
+  newName: gradata/stroom-k8s-operator
+  newTag: 1.0.11
