--- a/deploy/all-in-one.yaml
+++ b/deploy/all-in-one.yaml
@@ -4635,7 +4635,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: docker.intranet.gradata.com.au/gradata/stroom-k8s-operator:1.0.10
+        image: gradata/stroom-k8s-operator:1.0.11
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
