--- a/deploy/all-in-one.yaml
+++ b/deploy/all-in-one.yaml
@@ -3115,6 +3115,28 @@ spec:
                   imagePullPolicy:
                     description: PullPolicy describes a policy for if/when to pull a container image
                     type: string
+                  resources:
+                    description: ResourceRequirements describes the compute resource requirements.
+                    properties:
+                      limits:
+                        additionalProperties:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                        type: object
+                      requests:
+                        additionalProperties:
+                          anyOf:
+                          - type: integer
+                          - type: string
+                          pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                          x-kubernetes-int-or-string: true
+                        description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/'
+                        type: object
+                    type: object
                   securityContext:
                     description: Override the container security context
                     properties:
@@ -3202,6 +3224,9 @@ spec:
                             type: string
                         type: object
                     type: object
+                  systemName:
+                    description: Name of the `System` to set in feed metadata
+                    type: string
                 required:
                 - enabled
                 - image
@@ -4635,7 +4660,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: gradata/stroom-k8s-operator:1.0.12
+        image: docker.intranet.gradata.com.au/gradata/stroom-k8s-operator:1.0.13
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
