--- a/deploy/all-in-one.yaml
+++ b/deploy/all-in-one.yaml
@@ -4660,7 +4660,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: docker.intranet.gradata.com.au/gradata/stroom-k8s-operator:1.0.13
+        image: gradata/stroom-k8s-operator:1.0.13
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
