--- a/deploy/all-in-one.yaml
+++ b/deploy/all-in-one.yaml
@@ -4124,6 +4124,9 @@ spec:
                 description: Amount of time granted to nodes to drain their active tasks before being terminated
                 format: int64
                 type: integer
+              podManagementPolicy:
+                description: Pod management policy to use when deploying or scaling the StroomCluster
+                type: string
               statsDatabaseName:
                 default: stats
                 description: Name of the statistics database, usually `stats`
@@ -4660,7 +4663,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: gradata/stroom-k8s-operator:1.0.13
+        image: gradata/stroom-k8s-operator:1.0.14
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
