--- a/config/crd/bases/stroom.gchq.github.io_stroomclusters.yaml
+++ b/config/crd/bases/stroom.gchq.github.io_stroomclusters.yaml
@@ -89,6 +89,12 @@ spec:
                     required:
                     - name
                     type: object
+                  userName:
+                    default: stroomuser
+                    description: UserName is the name of the Stroom database user
+                      to use when connecting to the server. A corresponding key should
+                      exist in the provided Secret referenced by SecretName.
+                    type: string
                 type: object
               extraEnv:
                 description: Additional environment variables provided to each NodeSet
