--- a/deploy/all-in-one.yaml
+++ b/deploy/all-in-one.yaml
@@ -70,6 +70,10 @@ spec:
                     required:
                     - name
                     type: object
+                  userName:
+                    default: stroomuser
+                    description: UserName is the name of the Stroom database user to use when connecting to the server. A corresponding key should exist in the provided Secret referenced by SecretName.
+                    type: string
                 type: object
               image:
                 properties:
@@ -2032,6 +2036,10 @@ spec:
                     required:
                     - name
                     type: object
+                  userName:
+                    default: stroomuser
+                    description: UserName is the name of the Stroom database user to use when connecting to the server. A corresponding key should exist in the provided Secret referenced by SecretName.
+                    type: string
                 type: object
               extraEnv:
                 description: Additional environment variables provided to each NodeSet pod
@@ -4663,7 +4671,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: gradata/stroom-k8s-operator:1.0.15
+        image: docker.intranet.gradata.com.au/gradata/stroom-k8s-operator:1.0.16
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
