--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -1,14 +1,24 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 resources:
 - manager.yaml
+
 generatorOptions:
   disableNameSuffixHash: true
+
 configMapGenerator:
 - files:
   - controller_manager_config.yaml
   name: manager-config
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+
 images:
 - name: controller
   newName: gradata/stroom-k8s-operator
-  newTag: 1.0.18
+  newTag: HELM_IMAGE_TAG
+
+# Protect the /metrics endpoint by putting it behind auth.
+# If you want your controller-manager to expose the /metrics
+# endpoint w/o any authn/z, please comment the following line.
+patchesStrategicMerge:
+- manager_auth_proxy_patch.yaml
