--- a/charts/stroom-operator/templates/operator.yaml
+++ b/charts/stroom-operator/templates/operator.yaml
@@ -1,21 +1,14 @@
 apiVersion: v1
-kind: Namespace
-metadata:
-  labels:
-    control-plane: controller-manager
-  name: stroom-operator-system
----
-apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: stroom-operator-controller-manager
-  namespace: stroom-operator-system
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: stroom-operator-leader-election-role
-  namespace: stroom-operator-system
+  namespace: default
 rules:
 - apiGroups:
   - ""
@@ -316,7 +309,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   name: stroom-operator-leader-election-rolebinding
-  namespace: stroom-operator-system
+  namespace: default
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -324,7 +317,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: stroom-operator-controller-manager
-  namespace: stroom-operator-system
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -337,7 +330,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: stroom-operator-controller-manager
-  namespace: stroom-operator-system
+  namespace: default
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -350,7 +343,7 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: stroom-operator-controller-manager
-  namespace: stroom-operator-system
+  namespace: default
 ---
 apiVersion: v1
 data:
@@ -358,7 +351,7 @@ data:
 kind: ConfigMap
 metadata:
   name: stroom-operator-manager-config
-  namespace: stroom-operator-system
+  namespace: default
 ---
 apiVersion: v1
 kind: Service
@@ -366,7 +359,7 @@ metadata:
   labels:
     control-plane: controller-manager
   name: stroom-operator-controller-manager-metrics-service
-  namespace: stroom-operator-system
+  namespace: default
 spec:
   ports:
   - name: https
@@ -382,7 +375,7 @@ metadata:
     {{ include "stroom-operator.labels" . | nindent 4 }}
     control-plane: controller-manager
   name: stroom-operator-controller-manager
-  namespace: stroom-operator-system
+  namespace: default
 spec:
   replicas: 1
   selector:
