--- a/config/helm-chart/kustomization.yaml
+++ b/config/helm-chart/kustomization.yaml
@@ -3,8 +3,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-# Adds namespace to all resources.
-namespace: stroom-operator-system
+# Deploy to the default namespace, unless Helm specifies a different one
+namespace: default
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
