--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -15,7 +15,7 @@ configMapGenerator:
 images:
 - name: controller
   newName: gradata/stroom-k8s-operator
-  newTag: HELM_IMAGE_TAG
+  newTag: 1.0.19
 
 # Protect the /metrics endpoint by putting it behind auth.
 # If you want your controller-manager to expose the /metrics
