Deploy Stroom node Service as type `ClusterIP` by default

--- a/charts/stroom-operator-crds/templates/apiextensions.k8s.io_v1_customresourcedefinition_stroomclusters.stroom.gchq.github.io.yaml
+++ b/charts/stroom-operator-crds/templates/apiextensions.k8s.io_v1_customresourcedefinition_stroomclusters.stroom.gchq.github.io.yaml
@@ -2133,6 +2133,10 @@ spec:
                               type: string
                           type: object
                       type: object
+                    serviceType:
+                      default: ClusterIP
+                      description: 'ServiceType specifies the type of Service to create: Headless or ClusterIP.'
+                      type: string
                     startupProbeTimings:
                       description: StartupProbeTimings specify parameters for initial Pod startup. These should be set according to how long a node typically takes to start up and respond to healthchecks.
                       properties:
