--- a/deploy/all-in-one.yaml
+++ b/deploy/all-in-one.yaml
@@ -4096,6 +4096,10 @@ spec:
                               type: string
                           type: object
                       type: object
+                    serviceType:
+                      default: ClusterIP
+                      description: 'ServiceType specifies the type of Service to create: Headless or ClusterIP.'
+                      type: string
                     startupProbeTimings:
                       description: StartupProbeTimings specify parameters for initial Pod startup. These should be set according to how long a node typically takes to start up and respond to healthchecks.
                       properties:
