Allow pod security context override

--- a/charts/stroom-operator/values.yaml
+++ b/charts/stroom-operator/values.yaml
@@ -10,6 +10,13 @@ image:
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
 
+securityContext:
+  runAsNonRoot: true
+  runAsUser: 65532
+  runAsGroup: 65532
+  seccompProfile:
+    type: RuntimeDefault
+
 resources:
   requests:
     cpu: 100m
