--- a/deploy/all-in-one.yaml
+++ b/deploy/all-in-one.yaml
@@ -4900,7 +4900,7 @@ spec:
         - --leader-elect
         command:
         - /manager
-        image: docker.intranet.gradata.com.au/gradata/stroom-k8s-operator:1.0.25
+        image: gradata/stroom-k8s-operator:1.0.25
         imagePullPolicy: IfNotPresent
         livenessProbe:
           httpGet:
