--- a/charts/stroom-operator/templates/operator.yaml
+++ b/charts/stroom-operator/templates/operator.yaml
@@ -347,7 +347,18 @@ subjects:
 ---
 apiVersion: v1
 data:
-  controller_manager_config.yaml: "apiVersion: controller-runtime.sigs.k8s.io/v1alpha1\r\nkind: ControllerManagerConfig\r\nhealth:\r\n  healthProbeBindAddress: :8081\r\nmetrics:\r\n  bindAddress: 127.0.0.1:8080\r\nwebhook:\r\n  port: 9443\r\nleaderElection:\r\n  leaderElect: true\r\n  resourceName: 81fe7dea.gchq.github.io\r\n"
+  controller_manager_config.yaml: |
+    apiVersion: controller-runtime.sigs.k8s.io/v1alpha1
+    kind: ControllerManagerConfig
+    health:
+      healthProbeBindAddress: :8081
+    metrics:
+      bindAddress: 127.0.0.1:8080
+    webhook:
+      port: 9443
+    leaderElection:
+      leaderElect: true
+      resourceName: 81fe7dea.gchq.github.io
 kind: ConfigMap
 metadata:
   name: stroom-operator-manager-config
@@ -391,6 +402,29 @@ spec:
       affinity: {{ toYaml .Values.affinity | nindent 8 }}
       containers:
       - args:
+        - --secure-listen-address=0.0.0.0:8443
+        - --upstream=http://127.0.0.1:8080/
+        - --logtostderr=true
+        - --v=0
+        image: {{ if .Values.registry }}{{ printf "%s/" .Values.registry }}{{ end }}{{ "gcr.io/kubebuilder/kube-rbac-proxy" }}:v0.13.0
+        name: kube-rbac-proxy
+        ports:
+        - containerPort: 8443
+          name: https
+          protocol: TCP
+        resources:
+          limits:
+            cpu: 500m
+            memory: 128Mi
+          requests:
+            cpu: 5m
+            memory: 64Mi
+        securityContext:
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+            - ALL
+      - args:
         - --health-probe-bind-address=:8081
         - --metrics-bind-address=127.0.0.1:8080
         - --leader-elect
@@ -404,7 +438,7 @@ spec:
             port: 8081
           initialDelaySeconds: 15
           periodSeconds: 20
-        name: stroom-operator
+        name: manager
         readinessProbe:
           httpGet:
             path: /readyz
@@ -417,29 +451,6 @@ spec:
           capabilities:
             drop:
             - ALL
-      - args:
-          - --secure-listen-address=0.0.0.0:8443
-          - --upstream=http://127.0.0.1:8080/
-          - --logtostderr=true
-          - --v=0
-        image: {{ if .Values.registry }}{{ printf "%s/" .Values.registry }}{{ end }}{{ "gcr.io/kubebuilder/kube-rbac-proxy" }}:v0.13.1
-        name: kube-rbac-proxy
-        ports:
-          - containerPort: 8443
-            name: https
-            protocol: TCP
-        resources:
-          limits:
-            cpu: 500m
-            memory: 128Mi
-          requests:
-            cpu: 5m
-            memory: 64Mi
-        securityContext:
-          allowPrivilegeEscalation: false
-          capabilities:
-            drop:
-              - ALL
       nodeSelector: {{ toYaml .Values.nodeSelector | nindent 8 }}
       securityContext: {{ toYaml .Values.securityContext | nindent 8 }}
       serviceAccountName: stroom-operator-controller-manager
