--- a/controllers/static_content/stroomcluster-config.yaml
+++ b/controllers/static_content/stroomcluster-config.yaml
@@ -13,8 +13,15 @@ server:
   applicationContextPath: "${APPLICATION_CONTEXT_PATH:-/}"
   adminContextPath: "${ADMIN_CONTEXT_PATH:-/stroomAdmin}"
   applicationConnectors:
-    - type: http
-      port: ${STROOM_APP_PORT:-8080}
+    - type: https
+      port: ${STROOM_APP_PORT:-8443}
+      keyStoreType: PKCS12
+      keyStorePath: /stroom/pki/tls/keystore.p12
+      keyStorePassword: ${KEYSTORE_PASSWORD}
+      trustStoreType: PKCS12
+      trustStorePath: /stroom/pki/tls/truststore.p12
+      trustStorePassword: ${KEYSTORE_PASSWORD}
+      validateCerts: false
   adminConnectors:
     - type: http
       port: ${STROOM_ADMIN_PORT:-8081}
