--- a/config/crd/bases/stroom.gchq.github.io_stroomclusters.yaml
+++ b/config/crd/bases/stroom.gchq.github.io_stroomclusters.yaml
@@ -1904,6 +1904,10 @@ spec:
               https:
                 description: HTTPS settings
                 properties:
+                  enabled:
+                    description: Boolean value controling if TLS is enabled within
+                      the cluster
+                    type: boolean
                   tlsKeystorePasswordSecret:
                     description: Password of the keystore and truststore
                     properties:
@@ -1920,6 +1924,7 @@ spec:
                       and `truststore.p12`
                     type: string
                 required:
+                - enabled
                 - tlsKeystorePasswordSecret
                 - tlsSecretName
                 type: object
