--- a/config/crd/bases/stroom.gchq.github.io_stroomclusters.yaml
+++ b/config/crd/bases/stroom.gchq.github.io_stroomclusters.yaml
@@ -3299,6 +3299,13 @@ spec:
                         should be `true`, unless there is a need for a NodeSet to
                         be pure processing-only nodes, which cannot receive data.
                       type: boolean
+                    ingressLabels:
+                      additionalProperties:
+                        type: string
+                      description: IngressLabels is an optional map of labels to apply
+                        to the NodeSet's Ingress. These take precedence over any controller
+                        provided labels.
+                      type: object
                     livenessProbeTimings:
                       description: LivenessProbeTimings determine the parameters for
                         liveness probes. If a Pod fails successive probes, it is restarted.
