--- a/.github/workflows/build-helm-chart.yml
+++ b/.github/workflows/build-helm-chart.yml
@@ -1,49 +1,24 @@
-# Builds the Helm chart and pushes to ghcr.io
-name: build-helm-chart
+name: Build Helm Chart
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "master" ]
+    branches: [master]
+  pull_request: 
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-env:
-  REGISTRY: ghcr.io
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    permissions:
-      contents: read
-      packages: write
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
+jobs:    
+    build_helm_chart:
+      runs-on: ubuntu-latest
+      steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
       - name: Install Helm
         uses: azure/setup-helm@v3.3
         with:
           version: v3.9.0
-
-      - name: Helm repo login
+      - name: Build stroom-operator-crds chart
         run: |
-          helm registry login ${{ env.REGISTRY }} --username ${{ github.actor }} --password ${{ secrets.GITHUB_TOKEN }}
+          helm package ./charts/stroom-operator-crds
 
-      - name: Build and push stroom-operator-crds chart
+      - name: Build stroom-operator chart
         run: |
-          tar_path=$(helm package ./charts/stroom-operator-crds | sed -E 's/^.+ saved it to: (.+)$/\1/')
-          helm push "$tar_path" oci://${{ env.REGISTRY }}/gradata-systems/helm-charts
-
-      - name: Build and push stroom-operator chart
-        run: |
-          tar_path=$(helm package ./charts/stroom-operator | sed -E 's/^.+ saved it to: (.+)$/\1/')
-          helm push "$tar_path" oci://${{ env.REGISTRY }}/gradata-systems/helm-charts
+          helm package ./charts/stroom-operator
