--- a/.github/workflows/release-helm-chart.yml
+++ b/.github/workflows/release-helm-chart.yml
@@ -5,6 +5,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
+  NAMESPACE: gchq
 
 jobs:    
     build_and_release_helm_chart:
@@ -22,9 +23,9 @@ jobs:
       - name: Build and push stroom-operator-crds chart
         run: |
           tar_path=$(helm package ./charts/stroom-operator-crds | sed -E 's/^.+ saved it to: (.+)$/\1/')
-          helm push "$tar_path" oci://${{ env.REGISTRY }}/ld11466/helm-charts
+          helm push "$tar_path" oci://${{ env.REGISTRY }}/${{ env.NAMESPACE }}/helm-charts
 
       - name: Build and push stroom-operator chart
         run: |
           tar_path=$(helm package ./charts/stroom-operator | sed -E 's/^.+ saved it to: (.+)$/\1/')
-          helm push "$tar_path" oci://${{ env.REGISTRY }}/ld11466/helm-charts
+          helm push "$tar_path" oci://${{ env.REGISTRY }}/${{ env.NAMESPACE }}/helm-charts
